# pokedex-dictgen

./: .gitignore  Cargo.toml  LICENSE  README.md  make.sh
ddk/: Dictionary.css  Info.plist  Makefile
src/: fetcher.rs  gen.rs  image.rs  index.rs  main.rs  mon.rs  xhtml.rs
